[gd_scene load_steps=8 format=1]

[ext_resource path="res://scene/main/gui/compound_table/stove.gd" type="Script" id=1]
[ext_resource path="res://assets/img/bag/bag_bg_down.png" type="Texture" id=2]
[ext_resource path="res://assets/img/bag/bag_bg_up.png" type="Texture" id=3]
[ext_resource path="res://assets/img/block/grass_dirt.png" type="Texture" id=4]
[ext_resource path="res://assets/img/other/arrow1.png" type="Texture" id=5]
[ext_resource path="res://assets/img/other/arrow2.png" type="Texture" id=6]
[ext_resource path="res://assets/font/dynamicfont.tres" type="DynamicFont" id=7]

[node name="compound" type="Control"]

rect/min_size = Vector2( 240, 120 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 240.0
margin/bottom = 120.0
script/script = ExtResource( 1 )

[node name="grid0" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="list bg" type="GridContainer" parent="grid0"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 299.0
margin/bottom = 200.0
custom_constants/hseparation = 10
columns = 4

[node name="bg0" type="TextureButton" parent="grid0/list bg"]

visibility/light_mask = 512
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 2 )
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.679688, 0.655792, 0.655792, 1 )

[node name="bg1" type="TextureButton" parent="grid0/list bg"]

visibility/light_mask = 512
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 74.0
margin/top = 0.0
margin/right = 138.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 2 )
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.679688, 0.655792, 0.655792, 1 )

[node name="bg2" type="TextureButton" parent="grid0/list bg"]

visibility/light_mask = 512
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 148.0
margin/top = 0.0
margin/right = 212.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 2 )
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.679688, 0.655792, 0.655792, 1 )

[node name="bg3" type="TextureButton" parent="grid0/list bg"]

visibility/light_mask = 512
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 222.0
margin/top = 0.0
margin/right = 286.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 2 )
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.679688, 0.655792, 0.655792, 1 )

[node name="list" type="GridContainer" parent="grid0"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 320.0
margin/bottom = 300.0
custom_constants/vseparation = 25
custom_constants/hseparation = 30
columns = 4

[node name="item0" type="TextureButton" parent="grid0/list"]

visibility/light_mask = 512
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 22.4
margin/bottom = 22.4
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.7, 0.7 )
params/stretch_mode = 0

[node name="item1" type="TextureButton" parent="grid0/list"]

visibility/light_mask = 512
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 52.0
margin/top = 0.0
margin/right = 74.4
margin/bottom = 22.4
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.7, 0.7 )
params/stretch_mode = 0

[node name="item2" type="TextureButton" parent="grid0/list"]

visibility/light_mask = 512
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 104.0
margin/top = 0.0
margin/right = 126.4
margin/bottom = 22.4
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.7, 0.7 )
params/stretch_mode = 0

[node name="item3" type="TextureButton" parent="grid0/list"]

visibility/light_mask = 512
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 156.0
margin/top = 0.0
margin/right = 178.4
margin/bottom = 22.4
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.7, 0.7 )
params/stretch_mode = 0

[node name="list front" type="GridContainer" parent="grid0"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 316.0
margin/bottom = 286.0
custom_constants/hseparation = 10
columns = 4

[node name="front0" type="TextureButton" parent="grid0/list front"]

visibility/opacity = 0.4
visibility/light_mask = 512
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.933594, 0.933594, 0.933594, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="front1" type="TextureButton" parent="grid0/list front"]

visibility/opacity = 0.4
visibility/light_mask = 512
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 74.0
margin/top = 0.0
margin/right = 138.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.933594, 0.933594, 0.933594, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="front2" type="TextureButton" parent="grid0/list front"]

visibility/opacity = 0.4
visibility/light_mask = 512
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 148.0
margin/top = 0.0
margin/right = 212.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.933594, 0.933594, 0.933594, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="front3" type="TextureButton" parent="grid0/list front"]

visibility/opacity = 0.4
visibility/light_mask = 512
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 222.0
margin/top = 0.0
margin/right = 286.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.933594, 0.933594, 0.933594, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="arrow" type="TextureProgress" parent="grid0"]

visibility/light_mask = 512
rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 304.0
margin/top = 13.0
margin/right = 432.0
margin/bottom = 141.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 5 )
texture/over = null
texture/progress = ExtResource( 6 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="output" type="Node2D" parent="grid0"]

transform/pos = Vector2( 500.923, 191.228 )

[node name="list bg" type="GridContainer" parent="grid0/output"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -140.0
margin/top = -190.0
margin/right = 206.0
margin/bottom = 10.0
custom_constants/hseparation = 20
columns = 4
__meta__ = {
"_edit_lock_": true
}

[node name="bg0" type="TextureButton" parent="grid0/output/list bg"]

visibility/light_mask = 512
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 2 )
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.679688, 0.655792, 0.655792, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="bg1" type="TextureButton" parent="grid0/output/list bg"]

visibility/light_mask = 512
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 84.0
margin/top = 0.0
margin/right = 148.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 2 )
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.679688, 0.655792, 0.655792, 1 )

[node name="list" type="GridContainer" parent="grid0/output"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -130.0
margin/top = -180.0
margin/right = 196.0
margin/bottom = 110.0
custom_constants/vseparation = 25
custom_constants/hseparation = 40
columns = 4
__meta__ = {
"_edit_lock_": true
}

[node name="item0" type="TextureButton" parent="grid0/output/list"]

visibility/light_mask = 512
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 22.4
margin/bottom = 22.4
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.7, 0.7 )
params/stretch_mode = 0

[node name="item1" type="TextureButton" parent="grid0/output/list"]

visibility/light_mask = 512
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 62.0
margin/top = 0.0
margin/right = 84.4
margin/bottom = 22.4
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.7, 0.7 )
params/stretch_mode = 0

[node name="list front" type="GridContainer" parent="grid0/output"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -140.0
margin/top = -190.0
margin/right = 206.0
margin/bottom = 96.0
custom_constants/hseparation = 20
columns = 4
__meta__ = {
"_edit_lock_": true
}

[node name="front0" type="TextureButton" parent="grid0/output/list front"]

visibility/opacity = 0.4
visibility/light_mask = 512
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.933594, 0.933594, 0.933594, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="front1" type="TextureButton" parent="grid0/output/list front"]

visibility/opacity = 0.4
visibility/light_mask = 512
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 84.0
margin/top = 0.0
margin/right = 148.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.933594, 0.933594, 0.933594, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="num" type="GridContainer" parent="grid0/output"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -99.0
margin/top = -190.0
margin/right = 247.0
margin/bottom = 96.0
custom_constants/hseparation = 63
columns = 4
__meta__ = {
"_edit_lock_": true
}

[node name="num0" type="Label" parent="grid0/output/num"]

visibility/light_mask = 512
rect/min_size = Vector2( 20, 10 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 20.0
margin/bottom = 17.0
custom_fonts/font = ExtResource( 7 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="num1" type="Label" parent="grid0/output/num"]

visibility/light_mask = 512
rect/min_size = Vector2( 20, 10 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 83.0
margin/top = 0.0
margin/right = 103.0
margin/bottom = 17.0
custom_fonts/font = ExtResource( 7 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


